# ProCode-ARAData2018

./: AraEventPicker.cxx  AraFilterTools.cxx  AraFilterTools.h  CMakeLists.txt  INSTALL.sh  calPulserPicker.cxx  checkFilteredData.sh  checkRawData.sh  create_l0.sh  fileWriterUtil.c  getWaveRms.cxx  nchnlFilter.cxx  newFilter.cxx  pedFinder.sh  processData.sh  processFailedTarData.sh  processFailedTarRun.sh  processFullData.sh  processFullDataARA02.sh  processFullDataARA03.sh  processFullRun.sh  processFullTarDataARA02.sh  processFullTarDataARA03.sh  processFullTarRun.sh  processRun.sh  processTarData.sh  processTarRun.sh  randomFilter.cxx  runAtriFullRunFileMaker.sh  runAtriFullTarRunFileMaker.sh  runAtriRunFileMaker.sh  runAtriRunFileMakerTar.sh  runFilter.sh  runPicker.sh  runTarPicker.sh  smallRuns.txt  sortTreeEntries.cxx  testFilter1.cxx  testFilter2.cxx  testFilters.sh  (+3 more)
cmake/.svn/: all-wcprops  entries
cmake/Modules/: FindAraDisplay.cmake  FindAraRoot.cmake  Findsqlite3.cmake
cmake/Modules/.svn/: all-wcprops  entries
cmake/Modules/.svn/text-base/: FindAraEvent.cmake.svn-base
